# CS260-A4

./: CMakeLists.txt
.github/workflows/: build_cmake.yml
.nova/: Configuration.json
.nova/Tasks/: Custom Task.json
src/: main.cpp
